# cppcw-yatzy

./: CMakeLists.txt  datarace.cpp  sonar-project.properties
.github/workflows/: apisec-scan.yml  c-cpp.yml  checkmarx-one.yml  codacy.yml  codeql.yml  semgrep.yml  semgrep2.yml  sonarcloud.yml
